--- a/index.html
+++ b/index.html
@@ -95,10 +95,16 @@ import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10
 
 /* 🔥 GANTI CONFIG INI */
 const firebaseConfig = {
-  apiKey: "API_KEY",
-  authDomain: "PROJECT.firebaseapp.com",
-  databaseURL: "https://PROJECT-ID.firebaseio.com",
-  projectId: "PROJECT-ID"
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyAu--L2T5_o9xLVT09mXFLIcpPuLLWlL1Q",
+  authDomain: "aplikasi-percobaan-dbf84.firebaseapp.com",
+  databaseURL: "https://aplikasi-percobaan-dbf84-default-rtdb.firebaseio.com",
+  projectId: "aplikasi-percobaan-dbf84",
+  storageBucket: "aplikasi-percobaan-dbf84.appspot.com",
+  messagingSenderId: "52109851315",
+  appId: "1:52109851315:web:ba255b74b4ce0500774ec6",
+  measurementId: "G-H6WCVTQQEM"
 };
 
 const app = initializeApp(firebaseConfig);
