--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>APK Download</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- STYLE (APKPURE STYLE) -->
 <style>
 body {
   margin: 0;
@@ -88,14 +87,11 @@ body {
   <div class="loading">Loading aplikasi...</div>
 </div>
 
-<!-- FIREBASE + JS -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-/* 🔥 GANTI CONFIG INI */
-const firebaseConfig = {
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+/* ✅ FIREBASE CONFIG (BENAR) */
 const firebaseConfig = {
   apiKey: "AIzaSyAu--L2T5_o9xLVT09mXFLIcpPuLLWlL1Q",
   authDomain: "aplikasi-percobaan-dbf84.firebaseapp.com",
@@ -103,8 +99,7 @@ const firebaseConfig = {
   projectId: "aplikasi-percobaan-dbf84",
   storageBucket: "aplikasi-percobaan-dbf84.appspot.com",
   messagingSenderId: "52109851315",
-  appId: "1:52109851315:web:ba255b74b4ce0500774ec6",
-  measurementId: "G-H6WCVTQQEM"
+  appId: "1:52109851315:web:ba255b74b4ce0500774ec6"
 };
 
 const app = initializeApp(firebaseConfig);
