--- a/index.html
+++ b/index.html
@@ -705,6 +705,53 @@
       border-radius: 16px;padding: 10px 12px;
       display:flex;gap: 10px;align-items:flex-start;
     }
+
+
+    .reviewItem.pinned{
+      border-color: rgba(99,102,241,.35);
+      box-shadow: 0 10px 30px rgba(99,102,241,.08);
+    }
+    .replySection{ margin-top: 10px; }
+    .replyActions{ display:flex; gap:8px; flex-wrap:wrap; margin-top: 6px; }
+    .replyBtn{
+      border: 1px solid var(--line);
+      background:#fff;
+      padding: 6px 10px;
+      border-radius: 999px;
+      font-weight: 900;
+      font-size: 12px;
+      cursor:pointer;
+    }
+    .replyBtn:disabled{opacity:.5;cursor:not-allowed}
+    .replyEditor{
+      margin-top: 10px;
+      border: 1px dashed var(--line);
+      border-radius: 14px;
+      padding: 10px;
+      background: rgba(2,6,23,.02);
+    }
+    .replyEditor textarea{
+      width: 100%;
+      min-height: 70px;
+      resize: vertical;
+      border: 1px solid var(--line);
+      border-radius: 12px;
+      padding: 10px 12px;
+      font: inherit;
+      outline: none;
+    }
+    .replyEditor .row{ display:flex; gap:8px; justify-content:flex-end; flex-wrap:wrap; margin-top: 8px; }
+    .replyList{ display:flex; flex-direction:column; gap: 8px; margin-top: 10px; }
+    .replyItem{
+      border: 1px solid var(--line);
+      background: #fff;
+      border-radius: 14px;
+      padding: 10px 12px;
+    }
+    .replyTop{ display:flex; justify-content:space-between; gap:10px; align-items:center; }
+    .replyName{ font-weight: 1000; font-size: 12px; max-width: 260px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+    .replyText{ margin-top: 6px; color: var(--text); font-size: 13px; white-space: pre-wrap; word-break: break-word; }
+
     .rAvatar{
       width: 36px; height: 36px;border-radius: 999px;
       border: 1px solid var(--line);
@@ -1364,6 +1411,9 @@
     // modal listeners
     let unsubscribeReviews = null;
     let unsubscribeVotes = null;
+    let unsubscribeReplies = null;
+
+    let currentReplies = {}; // {reviewUid:{replyUid:{text,uid,role,createdAt,updatedAt}}}
 
     // user whitelist listener
     let unsubscribeWhitelist = null;
@@ -1403,6 +1453,71 @@
       const rem = getReviewEditRemainingMs(review, uid);
       return rem === Infinity || rem > 0;
     }
+
+    // ====== Realtime edit countdown (30 detik) ======
+    let _reviewEditTicker = null;
+    let _reviewEditTickerAppId = null;
+
+    function stopReviewEditTicker(){
+      if (_reviewEditTicker){
+        try{ clearInterval(_reviewEditTicker); }catch{}
+      }
+      _reviewEditTicker = null;
+      _reviewEditTickerAppId = null;
+    }
+
+    function startReviewEditTicker(appId){
+      stopReviewEditTicker();
+      _reviewEditTickerAppId = appId;
+
+      // only run when there is a review and still editable (non-admin)
+      if (!currentUser || !currentAppId) return;
+      const a0 = appById(appId);
+      const mine0 = a0?.reviews?.[currentUser.uid] || null;
+      if (!mine0) return;
+      const rem0 = getReviewEditRemainingMs(mine0, currentUser.uid);
+      if (rem0 === Infinity || rem0 <= 0) return;
+
+      const tick = ()=>{
+        if (!currentUser || !currentAppId || currentAppId !== _reviewEditTickerAppId){
+          stopReviewEditTicker();
+          return;
+        }
+        const a = appById(_reviewEditTickerAppId);
+        const mine = a?.reviews?.[currentUser.uid] || null;
+        if (!mine){
+          stopReviewEditTicker();
+          return;
+        }
+        const rem = getReviewEditRemainingMs(mine, currentUser.uid);
+        if (rem === Infinity){
+          stopReviewEditTicker();
+          return;
+        }
+        const secs = Math.max(0, Math.ceil(rem/1000));
+        const c1 = document.getElementById("editCountdown");
+        if (c1) c1.textContent = String(secs);
+        const c2 = document.getElementById("editorCountdown");
+        if (c2) c2.textContent = String(secs);
+
+        if (rem <= 0){
+          const editBtn = document.getElementById("editReviewBtn");
+          if (editBtn){
+            editBtn.disabled = true;
+            editBtn.style.opacity = ".5";
+          }
+          const submitBtn = document.getElementById("submitReviewBtn");
+          if (submitBtn) submitBtn.disabled = true;
+          const hintEl = document.getElementById("reviewHint");
+          if (hintEl) hintEl.textContent = "Edit terkunci (30 dtk).";
+          stopReviewEditTicker();
+        }
+      };
+
+      tick();
+      _reviewEditTicker = setInterval(tick, 250);
+    }
+
 
 
     function updateHeaderVisibility(){
@@ -2166,10 +2281,16 @@
       if (typeof unsubscribeVotes === "function"){
         try{ unsubscribeVotes(); }catch{}
       }
+      if (typeof unsubscribeReplies === "function"){
+        try{ unsubscribeReplies(); }catch{}
+      }
       unsubscribeReviews = null;
       unsubscribeVotes = null;
+      unsubscribeReplies = null;
       currentVotes = {};
       voteCounts = {};
+      currentReplies = {};
+      stopReviewEditTicker();
     }
 
     function attachReviewsListener(appId){
@@ -2184,6 +2305,7 @@
         updateReviewStatsUI(reviews);
         renderReviewsList(appId, reviews);
         refreshMyReviewSummary(appId, reviews);
+        startReviewEditTicker(appId);
       });
 
       const vRef = ref(db, `apps/${appId}/reviewVotes`);
@@ -2191,6 +2313,15 @@
         currentVotes = snap.exists() ? (snap.val() || {}) : {};
         voteCounts = computeVoteCounts(currentVotes);
         // rerender list (popular depends on likes)
+        const a = appById(appId);
+        renderReviewsList(appId, a?.reviews || {});
+      });
+
+      const pRef = ref(db, `apps/${appId}/replies`);
+      unsubscribeReplies = onValue(pRef, (snap)=>{
+        currentReplies = snap.exists() ? (snap.val() || {}) : {};
+        const idx = allApps.findIndex(x=>x.id===appId);
+        if (idx !== -1) allApps[idx].replies = currentReplies;
         const a = appById(appId);
         renderReviewsList(appId, a?.reviews || {});
       });
@@ -2202,6 +2333,58 @@
       const snap = await get(ref(db, `apps/${appId}/reviews/${uid}`));
       return snap.exists() ? snap.val() : null;
     }
+
+    function canReplyToReview(targetReviewUid){
+      if (!currentUser) return false;
+      const meAdmin = isAdminUid(currentUser.uid);
+      const targetAdmin = isAdminUid(targetReviewUid);
+      if (meAdmin) return true; // admin bebas balas semua ulasan
+      return targetAdmin;       // user biasa hanya boleh balas ulasan admin
+    }
+
+    async function submitReply(appId, targetReviewUid, text){
+      if (!currentUser) throw new Error("Not logged in");
+      const uid = currentUser.uid;
+      const meAdmin = isAdminUid(uid);
+      const targetAdmin = isAdminUid(targetReviewUid);
+      if (!meAdmin && !targetAdmin){
+        const err = new Error("Not allowed");
+        err.code = "REPLY_NOT_ALLOWED";
+        throw err;
+      }
+
+      const t = String(text || "").trim();
+      if (!t){
+        const err = new Error("Empty");
+        err.code = "REPLY_EMPTY";
+        throw err;
+      }
+
+      const now = Date.now();
+      const path = `apps/${appId}/replies/${targetReviewUid}/${uid}`;
+
+      let existing = null;
+      try{
+        const s = await get(ref(db, path));
+        existing = s.exists() ? (s.val() || null) : null;
+      } catch {}
+
+      const createdAt = existing ? Number(existing.createdAt || existing.updatedAt || now) : now;
+
+      const payload = {
+        uid,
+        userName: String(currentUser.displayName || "User"),
+        userPhoto: String(currentUser.photoURL || ""),
+        role: meAdmin ? "admin" : "user",
+        text: t,
+        createdAt,
+        updatedAt: now
+      };
+
+      await set(ref(db, path), payload);
+      return payload;
+    }
+
 
     async function submitReview(appId, stars, comment){
       if (!currentUser) throw new Error("Not logged in");
@@ -2523,7 +2706,7 @@
         extra = `<span>•</span><span class="hint">ADMIN</span>`;
       } else {
         extra = (rem > 0)
-          ? `<span>•</span><span class="hint">Edit: ${Math.ceil(rem/1000)} dtk</span>`
+          ? `<span>•</span><span class="hint">Edit: <span id="editCountdown">${Math.ceil(rem/1000)}</span> dtk</span>`
           : `<span>•</span><span class="hint">Edit terkunci (30 dtk)</span>`;
       }
 
@@ -2587,6 +2770,7 @@
           submitBtn.textContent = "Kirim";
           submitBtn.disabled = true;
           hintEl.textContent = "Login dulu untuk ulasan.";
+          stopReviewEditTicker();
           renderStars(); updateSelectedLabel(); updateCharInfo();
           return;
         }
@@ -2594,6 +2778,13 @@
         submitBtn.disabled = false;
 
         const mine = await getMyReview(appId);
+
+        // keep local cache for ticker/UI (biar countdown realtime tanpa reopen)
+        const a0 = appById(appId);
+        if (a0){
+          a0.reviews = a0.reviews || {};
+          if (mine) a0.reviews[currentUser.uid] = mine;
+        }
         if (mine){
           selectedStars = Number(mine.stars || 0);
           commentBox.value = String(mine.comment || "");
@@ -2602,17 +2793,21 @@
           const rem = getReviewEditRemainingMs(mine, currentUser.uid);
           if (rem === Infinity){
             hintEl.textContent = "Admin: edit bebas.";
+            stopReviewEditTicker();
           } else if (rem > 0){
-            hintEl.textContent = `Edit: ${Math.ceil(rem/1000)} dtk`;
+            hintEl.innerHTML = `Edit: <span id="editorCountdown">${Math.ceil(rem/1000)}</span> dtk`;
+            startReviewEditTicker(appId);
           } else {
             hintEl.textContent = "Edit terkunci (30 dtk).";
             submitBtn.disabled = true;
+            stopReviewEditTicker();
           }
         } else {
           selectedStars = 0;
           commentBox.value = "";
           submitBtn.textContent = "Kirim";
           hintEl.textContent = "Isi lalu Kirim.";
+          stopReviewEditTicker();
         }
         renderStars(); updateSelectedLabel(); updateCharInfo();
       }
@@ -2689,6 +2884,7 @@
       const entries = Object.entries(reviewsObj)
         .map(([uid,v])=>({
           uid,
+          isAdmin: isAdminUid(uid),
           stars: Number(v?.stars || 0),
           comment: String(v?.comment || ""),
           userName: String(v?.userName || "User"),
@@ -2714,25 +2910,66 @@
         });
       }
 
+      // auto pin: ulasan admin selalu di atas
+      const pinned = filtered.filter(r=>r.isAdmin).sort((x,y)=>(y.updatedAt||0)-(x.updatedAt||0));
+      const normal = filtered.filter(r=>!r.isAdmin);
+      filtered = pinned.concat(normal);
+
       list.innerHTML = "";
       if (filtered.length === 0){
         list.innerHTML = `<div class="hint">${reviewFilterStar ? "Tidak ada ulasan untuk filter ini." : "Belum ada ulasan. Jadilah yang pertama!"}</div>`;
         return;
       }
 
+      const repliesRoot = (a.replies || currentReplies || {});
+
       filtered.slice(0, 40).forEach(r=>{
         const my = myVote(r.uid);
         const likeActive = my === 1;
         const dislikeActive = my === -1;
 
+        const repliesObj = repliesRoot?.[r.uid] || {};
+        const repliesArr = Object.entries(repliesObj).map(([ruid,rv])=>({
+          uid: String(rv?.uid || ruid),
+          role: String(rv?.role || (isAdminUid(rv?.uid || ruid) ? "admin":"user")),
+          userName: String(rv?.userName || "User"),
+          userPhoto: String(rv?.userPhoto || ""),
+          text: String(rv?.text || rv?.comment || ""),
+          updatedAt: Number(rv?.updatedAt || 0),
+          createdAt: Number(rv?.createdAt || 0)
+        }))
+        .filter(x=>x.text.trim().length>0)
+        .sort((x,y)=>(x.updatedAt||0)-(y.updatedAt||0)); // oldest -> newest
+
+        const repliesHtml = repliesArr.length ? `
+          <div class="replyList">
+            ${repliesArr.map(rep=>`
+              <div class="replyItem">
+                <div class="replyTop">
+                  <div style="display:flex;gap:8px;align-items:center;min-width:0;flex-wrap:wrap">
+                    <img class="rAvatar" style="width:26px;height:26px" src="${rep.userPhoto || "icon/default.png"}" alt="avatar" onerror="this.src='icon/default.png'">
+                    <div class="replyName" title="${escapeHtml(rep.userName)}">${escapeHtml(rep.userName)}${isAdminUid(rep.uid) ? ' <span class="adminBadge small" title="Admin">ADMIN</span>' : ''}</div>
+                  </div>
+                  <div class="rTime">${rep.updatedAt ? timeAgo(rep.updatedAt) : ""}</div>
+                </div>
+                <div class="replyText">${escapeHtml(rep.text)}</div>
+              </div>
+            `).join("")}
+          </div>
+        ` : ``;
+
+        const canReply = canReplyToReview(r.uid);
+        const myReply = (currentUser && repliesObj && repliesObj[currentUser.uid]) ? repliesObj[currentUser.uid] : null;
+        const replyLabel = myReply ? "Edit balasan" : "Balas";
+
         const div = document.createElement("div");
-        div.className = "reviewItem";
+        div.className = `reviewItem${r.isAdmin ? " pinned":""}`;
         div.innerHTML = `
           <img class="rAvatar" src="${r.userPhoto || "icon/default.png"}" alt="avatar" onerror="this.src='icon/default.png'">
           <div class="rMain">
             <div class="rTop">
               <div style="display:flex;gap:8px;align-items:center;min-width:0;flex-wrap:wrap">
-                <div class="rName" title="${escapeHtml(r.userName)}"><span class="rNameText">${escapeHtml(r.userName)}</span>${isAdminUid(r.uid) ? '<span class="adminBadge small" title="Admin">ADMIN</span>' : ''}</div>
+                <div class="rName" title="${escapeHtml(r.userName)}">${escapeHtml(r.userName)}${r.isAdmin ? ' <span class="adminBadge small" title="Admin">ADMIN</span>' : ''}</div>
                 <div>${starsDisplay(r.stars)}</div>
               </div>
               <div class="rTime">${r.updatedAt ? timeAgo(r.updatedAt) : ""}</div>
@@ -2743,23 +2980,129 @@
               <button class="voteBtn ${likeActive ? "active":""}" data-v="1" data-ruid="${r.uid}" type="button" aria-label="Like">${iconThumbUp()} <span>${r.like}</span></button>
               <button class="voteBtn ${dislikeActive ? "active":""}" data-v="-1" data-ruid="${r.uid}" type="button" aria-label="Dislike">${iconThumbDown()} <span>${r.dislike}</span></button>
             </div>
+
+            <div class="replySection">
+              ${canReply ? `
+                <div class="replyActions">
+                  <button class="replyBtn replyToggleBtn" data-ruid="${r.uid}" type="button">${replyLabel}</button>
+                </div>
+                <div class="replyEditor hidden" data-ruid="${r.uid}">
+                  <textarea class="replyBox" maxlength="300" placeholder="Tulis balasan..."></textarea>
+                  <div class="row">
+                    <button class="btn replyCancelBtn" data-ruid="${r.uid}" type="button">Batal</button>
+                    <button class="btn primary replySendBtn" data-ruid="${r.uid}" type="button">Kirim</button>
+                  </div>
+                  <div class="hint" style="margin-top:6px">User biasa: hanya bisa balas ulasan ADMIN. Admin: bebas balas semua.</div>
+                </div>
+              ` : ``}
+
+              ${repliesHtml}
+            </div>
           </div>
         `;
+
         list.appendChild(div);
       });
 
-      // click handler votes (event delegation)
+      // click handler votes + replies (event delegation)
       list.onclick = async (e)=>{
-        const btn = e.target.closest(".voteBtn");
-        if (!btn) return;
-        const v = Number(btn.dataset.v || 0);
-        const ruid = String(btn.dataset.ruid || "");
-        if (!v || !ruid) return;
-        try{
-          await setVote(appId, ruid, v);
-        } catch (err){
-          console.error(err);
-          toast("Gagal vote. Cek Rules.");
+        const voteBtn = e.target.closest(".voteBtn");
+        if (voteBtn){
+          const v = Number(voteBtn.dataset.v || 0);
+          const ruid = String(voteBtn.dataset.ruid || "");
+          if (!v || !ruid) return;
+          try{
+            await setVote(appId, ruid, v);
+          } catch (err){
+            console.error(err);
+            toast("Gagal vote. Cek Rules.");
+          }
+          return;
+        }
+
+        const toggleBtn = e.target.closest(".replyToggleBtn");
+        if (toggleBtn){
+          const targetUid = String(toggleBtn.dataset.ruid || "");
+          if (!targetUid) return;
+          if (!currentUser){
+            toast("Login dulu untuk membalas.");
+            return;
+          }
+          if (!canReplyToReview(targetUid)){
+            toast("Balasan hanya untuk ulasan ADMIN.");
+            return;
+          }
+          const item = toggleBtn.closest(".reviewItem");
+          if (!item) return;
+          const editor = item.querySelector(`.replyEditor[data-ruid="${targetUid}"]`);
+          if (!editor) return;
+
+          const box = editor.querySelector("textarea.replyBox");
+          const send = editor.querySelector(".replySendBtn");
+          if (!box || !send) return;
+
+          const repliesObj = (appById(appId)?.replies || currentReplies || {})?.[targetUid] || {};
+          const myReply = repliesObj?.[currentUser.uid] || null;
+
+          if (!editor.classList.contains("hidden")){
+            // close
+            editor.classList.add("hidden");
+            return;
+          }
+
+          // open & prefill
+          editor.classList.remove("hidden");
+          box.value = String(myReply?.text || myReply?.comment || "");
+          send.textContent = myReply ? "Perbarui" : "Kirim";
+          setTimeout(()=>box.focus({preventScroll:false}), 30);
+          return;
+        }
+
+        const cancelBtn = e.target.closest(".replyCancelBtn");
+        if (cancelBtn){
+          const targetUid = String(cancelBtn.dataset.ruid || "");
+          const item = cancelBtn.closest(".reviewItem");
+          const editor = item?.querySelector(`.replyEditor[data-ruid="${targetUid}"]`);
+          if (editor) editor.classList.add("hidden");
+          return;
+        }
+
+        const sendBtn = e.target.closest(".replySendBtn");
+        if (sendBtn){
+          const targetUid = String(sendBtn.dataset.ruid || "");
+          if (!targetUid) return;
+          if (!currentUser){
+            toast("Login dulu untuk membalas.");
+            return;
+          }
+          if (!canReplyToReview(targetUid)){
+            toast("Balasan hanya untuk ulasan ADMIN.");
+            return;
+          }
+          const item = sendBtn.closest(".reviewItem");
+          const editor = item?.querySelector(`.replyEditor[data-ruid="${targetUid}"]`);
+          const box = editor?.querySelector("textarea.replyBox");
+          if (!editor || !box) return;
+
+          const text = String(box.value || "").trim();
+          if (!text){
+            toast("Balasan tidak boleh kosong.");
+            return;
+          }
+          if (text.length > 300){
+            toast("Balasan terlalu panjang (max 300).");
+            return;
+          }
+          try{
+            await submitReply(appId, targetUid, text);
+            toast("Balasan tersimpan.");
+            editor.classList.add("hidden");
+          } catch (err){
+            if (String(err?.code||"") === "REPLY_NOT_ALLOWED") toast("Balasan hanya untuk ulasan ADMIN.");
+            else toast("Gagal menyimpan balasan. Cek Rules.");
+            console.error(err);
+          }
+          return;
         }
       };
     }
@@ -2785,4 +3128,3 @@
   </script>
 </body>
 </html>
-
